force-app/main/default/objects/ErrorLog__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>