force-app/main/default/objects/ErrorLog__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>