force-app/main/default/objects/ErrorLog__c/fields/Error_Records__c.field-meta.xml
<CustomField>
    <fullName>Error_Records__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Records</label>
    <length>255</length>
    <type>Text</type>
</CustomField>