force-app/main/default/objects/ErrorLog__c/fields/Exl_PEPayload__c.field-meta.xml
<CustomField>
    <fullName>Exl_PEPayload__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exl PE Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>