force-app/main/default/objects/ErrorLog__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <description>to store record id which has thrown exception</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>